[package]
name = "coarsetime"
version = "0.1.26"
description = "Time and duration crate optimized for speed"
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["time", "date", "duration"]
readme = "README.md"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-coarsetime"
repository = "https://github.com/jedisct1/rust-coarsetime"
categories = ["concurrency", "date-and-time", "os"]
edition = "2018"

[badges]
travis-ci = { repository = "jedisct1/rust-coarsetime" }
appveyor = { repository = "jedisct1/rust-coarsetime" }

[features]
nightly = []

[dependencies]
once_cell = "1"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.11.0"

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1
incremental = false
