[package]
name = "coarsetime"
version = "0.1.37"
description = "Time and duration crate optimized for speed"
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["time", "date", "duration"]
readme = "README.md"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-coarsetime"
repository = "https://github.com/jedisct1/rust-coarsetime"
categories = ["concurrency", "date-and-time", "os"]
edition = "2018"

[badges]
appveyor = { repository = "jedisct1/rust-coarsetime" }

[features]
wasi-abi2 = ["dep:wasi-abi2"]

[target.'cfg(not(any(target_os = "wasix", target_os = "wasi")))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi-abi2 = { package = "wasi", version = "0.14.2", optional = true }

[target.'cfg(any(target_os = "wasix", target_os = "wasi"))'.dependencies]
wasix = "0.12"

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
benchmark-simple = "0.1.10"

[profile.bench]
codegen-units = 1

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1
incremental = false

[profile.dev]
overflow-checks=true
